# grok-build

./: .gitignore  AGENTS.md  README.md
.cargo/: config.toml
.github/workflows/: desktop.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: acp.js  index.html  main.js  markdown.js  style.css
